--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dmitry.kovganov/core",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,5 +16,5 @@
     "url": "https://github.com/DmitryKovganov/microservices-project-core/issues"
   },
   "homepage": "https://github.com/DmitryKovganov/microservices-project-core#readme",
-  "type": "module"
+  "type": "commonjs"
 }
